modal positioned correctly - z-index not correct

--- a/src/App.css
+++ b/src/App.css
@@ -233,7 +233,8 @@
   .modal-content {
     width: 1500px;
     height: 1050px;
-    background-color: rgba(0, 0, 0, 0.8);
+    /* background-color: rgba(0, 0, 0, 0.8); */
+    background-color: #000000;
     top: 50%;
     left: 50%;
     margin-left: -50%;
@@ -488,11 +489,19 @@
   background-size: 340px;
 }
 
+.modal {
+  right: 0;
+  top: 0;
+}
+
 .modal-content {
+  right: 0;
+  top: 0;
+  left: 0;
+  margin-left: 0px;
+  margin-top: 100vh;
   width: 100%;
   height: 100vh;
-  margin-left: 0%;
-  margin-top: -87%;
   border: none;
   border-radius: 0px;
 }
